<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Bienvenido/a"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/btnAgregarTrabajadorPrin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_principal1"
        android:textAllCaps="false"
        android:layout_marginTop="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

    <Button
        android:id="@+id/btnMostrarLisPrin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_principal2"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

    <Button
        android:id="@+id/btnAcercaDePrin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_principal3"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

</LinearLayout>