<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context=".TrabajadorTiempoCompletoActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Registro"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="70dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/id"/>
        <EditText
            android:id="@+id/edtIDTTC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="69dp"
            android:textSize="18sp"
            android:inputType="number"
            android:hint="Digite el ID"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/nombre_Activity"/>
        <EditText
            android:id="@+id/edtNombreTTC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:inputType="text"
            android:hint="Digite el nombre"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/apellido_Activity"/>
        <EditText
            android:id="@+id/edtApellidoTTC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:inputType="text"
            android:hint="Digite el apellido"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/salario"/>
        <EditText
            android:id="@+id/edtSalarioTTC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:textSize="18sp"
            android:inputType="numberDecimal"
            android:hint="Digite el salario"/>
    </LinearLayout>
    <Button
        android:id="@+id/btnAgregarTC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Agregar"
        android:textAllCaps="false"
        android:layout_marginTop="140dp"/>

</LinearLayout>